Naming convention and bug fixes!
