# passwordChecker.WebAPI/Controllers/PasswordController.cs
@@ -20,16 +20,35 @@ namespace passwordChecker.WebAPI.Controllers
             PasswordChecker = passwordChecker;
             BreachDataCollector = breachDataCollector;
         }
-        
+
         [HttpPost("CheckPassword")]
-        [ProducesResponseType(typeof(PasswordStrengthResponse),StatusCodes.Status200OK)]
+        [ProducesResponseType(typeof(PasswordResponse), StatusCodes.Status200OK)]
+        [ProducesResponseType(typeof(ErrorResponse), StatusCodes.Status500InternalServerError)]
+        public async Task<IActionResult> CheckPasswordAsync(string password)
+        {
+            try
+            {
+                var passwordStrength = PasswordChecker.GetPasswordStrength(password).GetPasswordStrength();
+                var breachCount = await BreachDataCollector.GetBreachCountAsync(password);
+                var passwordResponse = PasswordResponse.ToPasswordResponse(passwordStrength, breachCount);
+                return Ok(passwordResponse);
+            }
+            catch (Exception ex)
+            {
+                var error = ResponseManager.GetErrorResponse(ex);
+                return StatusCode(StatusCodes.Status500InternalServerError, error);
+            }
+        }
+
+        [HttpPost("GetPasswordStrength")]
+        [ProducesResponseType(typeof(PasswordStrength),StatusCodes.Status200OK)]
         [ProducesResponseType(typeof(ErrorResponse),StatusCodes.Status500InternalServerError)]
-        public IActionResult CheckPassword(string password)
+        public IActionResult GetPasswordStrength(string password)
         {
             try
             {
                 var passwordStrength = PasswordChecker.GetPasswordStrength(password);
-                var passwordStrengthResponse = passwordStrength.GetResponseMessage();
+                var passwordStrengthResponse = passwordStrength.GetPasswordStrength();
                 return Ok(passwordStrengthResponse);
             }
             catch(Exception ex)
@@ -46,7 +65,7 @@ namespace passwordChecker.WebAPI.Controllers
         {
             try
             {
-                var count = await BreachDataCollector.GetBreachCount(password);
+                var count = await BreachDataCollector.GetBreachCountAsync(password);
                 return Ok(count);
             }
             catch (Exception ex)
